@@ -4,13 +4,14 @@ use strict;
 #use Math::Primality;
 use Math::Prime::XS;
 use Math::Prime::Util;
+use Math::Pari;
 #use Math::Prime::FastSieve;
 use Benchmark qw/:all/;
 use List::Util qw/min max/;
 my $count = shift || -5;
 
 srand(29);
-test_at_digits($_) for (5..10);
+test_at_digits($_) for (5..15);
 
 
 sub test_at_digits {
@@ -35,6 +36,7 @@ sub test_at_digits {
     #'M::P::FS' => sub { $sieve->isprime($_) for @nums },
     'M::P::U' => sub { Math::Prime::Util::is_prime($_) for @nums },
     'MPU prob' => sub { Math::Prime::Util::is_prob_prime($_) for @nums },
+    'Math::Pari' => sub { Math::Pari::isprime($_) for @nums },
   });
   print "\n";
 }
