@@ -9,6 +9,8 @@ extern int trial_factor(UV n, UV *factors, UV maxtrial);
 
 extern int fermat_factor(UV n, UV *factors, UV rounds);
 
+extern int holf_factor(UV n, UV *factors, UV rounds);
+
 extern int squfof_factor(UV n, UV *factors, UV rounds);
 
 extern int pbrent_factor(UV n, UV *factors, UV maxrounds);
